# EDGE-classic

./: .clang-format  .gitignore  CMakeLists.txt  edge.lua  test.lua  ui.lua
.github/workflows/: cmake.yml
cmake/: EdgeWeb.cmake  Emscripten.cmake
docs/lua/types/: edge.lua
docs/shaderref/: gl4es_fog.glsl  gl4es_mirror.glsl  gl4es_plasmagun.glsl
edge_base/heretic/scripts/lua/: lua_hud.lua
edge_defs/lua/: coal_api.lua  coal_hud.lua  init.lua  test2.lua  vec3.lua
edge_defs/scripts/lua/: lua_api.lua  lua_hud.lua
edge_defs/scripts/lua/compat/: lua_hud.lua  lua_sys.lua
edge_defs/scripts/lua/core/: vec3.lua
edge_defs/scripts/lua/smc/: calculator.lua  demo.lua  node_editor.lua  overview.lua  style.lua  test.lua  whee.lua
libraries/: CMakeLists.txt
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/imgui/: CMakeLists.txt
libraries/jlsignal/: CMakeLists.txt  ObjectPool.h
libraries/luabridge/: CMakeLists.txt
libraries/moonnuklear/: CMakeLists.txt
libraries/moonnuklear/src/: tree.h
libraries/moonnuklear/src/nuklear/: nuklear.h
libraries/sokol/: CMakeLists.txt  sokol.cc  sokol_color.h  sokol_gfx.h
libraries/sokol/shaders/: world.h
script/: test.yue
source_files/: CMakeLists.txt
source_files/ajbsp/: CMakeLists.txt
source_files/coal/: CMakeLists.txt
source_files/crsid/: CMakeLists.txt
source_files/ddf/: CMakeLists.txt
source_files/dehacked/: CMakeLists.txt
source_files/ec_voxelib/: CMakeLists.txt
source_files/edge/: CMakeLists.txt  con_con.cc  con_main.cc  e_input.cc  e_main.cc  e_player.cc  f_finale.cc  g_game.cc  hu_draw.cc  hu_font.cc  i_ctrl.cc  i_defs_gl.h  i_main.cc  i_movie.cc  i_system.cc  i_system.h  i_video.cc  i_web.cc  lua_coal_api.cc  lua_coal_hud.cc  lua_coal_player.cc  lua_coal_vm.cc  lua_coal_vm.h  lua_edge.cc  lua_edge.h  lua_hud.cc  lua_sys.cc  lua_vm.cc  lua_vm.h  m_menu.cc  m_misc.cc  n_network.cc  p_action.cc  p_blockmap.cc  p_mobj.cc  p_mobj.h  p_setup.cc  p_user.cc  r_backend.cc  r_backend.h  (+38 more)
source_files/edge/gfx/: gfx.h  gfx_main.cc  gfx_units.cc
source_files/edge/gfx/shaders/: depth.glsl  depth.h  pp_ssao.glsl  pp_ssao.h  screen.glsl  screen.h  world.glsl  world.h  world_backup.glsl  world_single_texture.glsl  world_single_texture.h
source_files/edge/render/: r_draw.cc  r_main.cc  r_render.cc  r_render_port.h  r_sky.cc  r_state.h  r_texgl.cc  r_things.cc  r_wipe.cc
source_files/edge/render/gl/: gl_backend.cc  gl_font.cc  gl_hu_draw.cc  gl_main.cc  gl_render_port.cc  gl_state.cc  gl_state.h  gl_wipe.cc
source_files/edge/render/sokol/: sk_d3d11.cc  sk_d3d11.h  sk_font.cc  sk_gl.cc  sk_gl.h  sk_glstubs.h  sk_hu_draw.cc  sk_local.h  sk_main.cc  sk_md2.cc  sk_mdl.cc  sk_render_port.cc  sk_state.cc  sk_state.h  sk_units.cc  sk_wipe.cc  sokol_backend.cc  sokol_d3d11.cc  sokol_gl.h  sokol_md2.cc  sokol_pipeline.cc  sokol_pipeline.h  sokol_render_thread.cc  sokol_state.cc  sokol_units.cc
source_files/edge/render/sokol/shaders/: blur.glsl  depthblur.glsl  linear_depth.glsl  screen.glsl  shader_blur.h  shader_depthblur.h  shader_linear_depth.h  shader_screen.h  shader_ssao.h  shader_ssao_combine.h  ssao.glsl  ssao_combine.glsl  world.glsl  world.h
source_files/edge/script/coal/: vm_hud.cc
source_files/edge/script/common/: script_hud.cc  script_hud.h
source_files/edge/script/compat/: lua_compat.cc  lua_compat.h  lua_core.cc  lua_game.cc  lua_hud.cc  lua_player.cc  lua_vm.cc
source_files/edge/script/lua/: lua_vm.cc  lua_vm.h
source_files/edge/script/lua/compat/: lua_compat.cc  lua_compat.h  lua_hud.cc  lua_hud.h  lua_sys.cc
source_files/edge/smc/: smc_host.cc  smc_host.h
source_files/edge/ui/: ui_backend.cc  ui_backend.h  ui_demo.cc  ui_platform.cc  ui_platform_extensions.cc  ui_renderer.cc  ui_shell.cc  ui_shell_fileinterface.cc
source_files/egfx/: CMakeLists.txt
source_files/egfx/private/: gfx_main.cc  gfx_notes.h  gfx_types.h
source_files/elua/: CMakeLists.txt  CmakeLists.txt  elua.h  elua_module.cc  elua_module.h  elua_vm.cc  elua_vm.h
source_files/elua/elua_base/: package-lock.json  package.json  tsconfig.json
source_files/elua/elua_base/src/: test.ts  vec2.d.ts  vec3.d.ts  vector.ts
source_files/elua/elua_base/types/: coal.d.ts  ec.d.ts  vector.d.ts
source_files/epi/: CMakeLists.txt  epi.h  epi_lua.cc  epi_lua.h  filesystem.cc  filesystem.h  math_vector.h  sound_types.cc
source_files/fluidlite/: CMakeLists.txt
source_files/fmmidi/: CMakeLists.txt
source_files/gl4es/: CMakeLists.txt
source_files/gl4es/src/: CMakeLists.txt
source_files/glad/: CMakeLists.txt
source_files/libgme/: CMakeLists.txt
source_files/libgme/gme/: CMakeLists.txt
source_files/libymfm/: CMakeLists.txt
source_files/lua/: CMakeLists.txt
source_files/m4p/: CMakeLists.txt
source_files/miniz/: CMakeLists.txt
source_files/rmlui/: CMakeLists.txt  FileList.cmake
source_files/rmlui/Dependencies/freetype/: CMakeLists.txt
source_files/smc/: .clang-format  CMakeLists.txt  bsp_level.cc  e_checks.cc  e_checks.h  e_commands.cc  e_main.cc  im_color.cc  im_img.cc  im_img.h  lib_file.cc  lib_util.cc  m_config.cc  m_editlump.cc  m_events.cc  m_files.cc  m_files.h  m_game.cc  m_keys.cc  m_loadsave.cc  m_nodes.cc  m_testmap.cc  main.cc  nuklear_defines.h  r_opengl.cc  r_render.cc  r_software.cc  smc.cc  smc.h  smc_bsp.h  smc_bsp_level.cc  smc_bsp_node.cc  smc_bsp_util.cc  smc_e_basis.cc  smc_e_basis.h  smc_e_checks.cc  smc_e_checks.h  smc_e_commands.cc  smc_e_cutpaste.cc  smc_e_cutpaste.h  (+164 more)
source_files/smc/script/: whee.tl
source_files/sol/: sol.hpp
source_files/sol/sol/: config.hpp  forward.hpp
source_files/tracy/: edge_profiling.h
source_files/ymfmidi/: CMakeLists.txt
web/site/: app.js  edge-web.js  index.html  index.js  index2.html
