

add_executable(
  edge-classic
	i_main.cc     
	i_ctrl.cc     
	i_video.cc    
	i_sound.cc    
	i_net.cc      
	am_map.cc     
	bot_nav.cc     
	bot_think.cc      
	con_con.cc    
	con_main.cc   
	con_var.cc    
	e_input.cc    
	e_main.cc     
	e_player.cc   
	f_finale.cc   
	f_interm.cc   
	g_game.cc     
	hu_draw.cc    
	hu_font.cc    
	hu_stuff.cc   
	hu_style.cc
	i_system.cc 
	l_ajbsp.cc    
	l_deh.cc      
	m_argv.cc     
	m_bbox.cc     
	m_cheat.cc    
	m_math.cc     
	m_menu.cc     
	m_misc.cc     
	m_option.cc   
	m_netgame.cc  
	m_random.cc   
	n_bcast.cc    
	n_reliable.cc 
	n_network.cc  
	p_action.cc   
	p_blockmap.cc 
	p_enemy.cc    
	p_inter.cc    
	p_lights.cc   
	p_map.cc      
	p_maputl.cc   
	p_mobj.cc     
	p_plane.cc    
	p_setup.cc    
	p_sight.cc    
	p_spec.cc     
	p_switch.cc   
	p_tick.cc     
	p_user.cc     
	p_forces.cc   
	p_telept.cc   
	p_weapon.cc   
	rad_act.cc    
	rad_pars.cc   
	rad_trig.cc   
	r_draw.cc     
	r_shader.cc   
	r_render.cc   
	r_effects.cc  
	r_main.cc     
	r_occlude.cc   
	r_things.cc   
	r_units.cc    
	r_wipe.cc     
	r_misc.cc     
	r_sky.cc      
	r_colormap.cc 
	r_modes.cc
	r_mdl.cc    
	r_md2.cc
	r_voxel.cc     
	r_image.cc    
	r_doomtex.cc  
	r_texgl.cc
	s_blit.cc     
	s_cache.cc    
	s_sound.cc 
	s_mp3.cc   
	s_music.cc    
	s_ogg.cc      
	s_fluid.cc
	s_gme.cc
	s_m4p.cc
	s_opl.cc
	s_sid.cc
	s_vgm.cc
	s_wav.cc
	s_flac.cc 
	s_fmm.cc
	sv_chunk.cc   
	sv_glob.cc    
	sv_level.cc   
	sv_load.cc    
	sv_main.cc    
	sv_misc.cc    
	sv_mobj.cc    
	sv_play.cc    
	sv_save.cc    
	w_files.cc
	w_flat.cc
	w_model.cc
	w_pk3.cc
	w_sprite.cc
	w_texture.cc
	w_wad.cc 
	vm_coal.cc    
	vm_hud.cc     
	vm_player.cc  
	scanner.cc     
	umapinfo.cc  
	w32_res.rc # I think this is ok to leave in regardless of OS (silently ignored on *nix?)
)

if(MSVC)
  target_include_directories(edge-classic PRIVATE ${CMAKE_SOURCE_DIR}/source_files/sdl2/include)
endif()

target_include_directories(edge-classic PRIVATE ../stb ../dr_libs ../minimp3)

target_link_libraries(edge-classic 
    edge_ajbsp
    edge_coal
    edge_ddf
    edge_deh
    edge_epi
    glad
    ${OPENGL_LIBRARIES}
    ${SDL2_LIBRARIES}
    crsid
    ec_voxelib
    fmmidi
    fluidlite
    gme
    miniz
    m4p
    libymfm
    ymfmidi
    wsock32)
